--- a/barcode-research-service/barcode-research-service-ui/src/index.html
+++ b/barcode-research-service/barcode-research-service-ui/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>BarcodeResearchServiceUi</title>
+  <title>Операції в скінченних полях</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
